--- a/static/css/main.css
+++ b/static/css/main.css
@@ -143,7 +143,7 @@ body * {
     align-items: center;
 }
 
-#h-w-input .options, #dpi-input .options {
+#h-w-input .options, #d-input .options {
     gap: 20px;
 }
 
