--- a/static/css/main.css
+++ b/static/css/main.css
@@ -116,7 +116,7 @@ body * {
 
 .options-box {
   margin: 0px;
-  padding: 20px;
+  padding: 15px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -280,4 +280,69 @@ input.num-input {
 
 #render button:disabled:active {
     background-color: var(--text-light) !important;
+}
+
+#open-log {
+  height: 30px
+}
+
+#log-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: var(--color-4);
+  z-index: 1000;
+  overflow-y: scroll;
+}
+
+#log-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 60px;
+  background-color: var(--color-1);
+  color: var(--text-alt);
+  font-size: 2em;
+  margin-bottom: 10px;
+}
+
+#close-log {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 60px;
+  height: 60px;
+  background-color: var(--color-1);
+  color: var(--text-alt);
+  font-size: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border: 1px solid var(--color-1);
+  font-weight: bolder;
+}
+
+#log-content {
+  width: 100%;
+}
+
+#log-content tr {
+  background-color: var(--color-2);
+  color: var(--text-main);
+  border: 1px solid var(--color-1);
+}
+
+#log-content td {
+  padding: 5px;
+}
+
+#log-content th {
+  background-color: var(--color-1);
+  color: var(--text-alt);
+  padding: 10px;
 }
