--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,9 +1,10 @@
 :root {
   --color-1: #1d3664;
-  --color-2: #f5f5f5;
+  --color-2: #f1f1f1;
   --color-3: #5b89de;
   --color-4: #7a9fe4;
   --color-5: #26a81a;
+  --color-6: #f55454;
   --text-main: #111111;
   --text-alt: #eeeeee;
   --text-light: #696969;
@@ -211,13 +212,25 @@ input.num-input {
     transition: background-color 0.2s;
 }
 
+#id-input input.num-input {
+  text-align: left;
+  width: 200px;
+}
+
+#id-input label {
+  font-size: 1.2em;
+  font-weight: 600;
+  margin-right: 10px;
+  margin-bottom: 20px;
+}
 
 #render {
     grid-area: render;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
+    justify-content: flex-start;
     align-items: center;
+    row-gap: 20px;
 }
 
 #render button {
@@ -226,7 +239,7 @@ input.num-input {
     padding: 10px;
     height: 40px;
     border-radius: 20px;
-    width: 200px;
+    width: 50%;
     border: 2px solid var(--color-3);
     background-color: var(--color-2);
     color: var(--text-main);
@@ -234,6 +247,15 @@ input.num-input {
     text-align: center;
     cursor: pointer;
     transition: background-color 0.2s;
+}
+
+#info-box {
+  border: 2px solid var(--color-1);
+  border-radius: var(--button-radius);
+  width: 40%;
+  padding: 20px;
+  font-size: 1em;
+  font-weight: 600;
 }
 
 #render button.pulse {
@@ -345,4 +367,47 @@ input.num-input {
   background-color: var(--color-1);
   color: var(--text-alt);
   padding: 10px;
+}
+
+#print-confirmation-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #00000099;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#print-confirmation {
+  width: 400px;
+  height: 200px;
+  background-color: var(--color-2);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  row-gap: 20px;
+  padding: 50px; 
+}
+
+#print-confirmation-yes:hover {
+  background-color: var(--color-5) !important;
+  border-color: var(--color-5);
+  color: var(--text-alt);
+}
+
+#print-confirmation-no:hover {
+  background-color: var(--color-6) !important;
+  border-color: var(--color-6);
+  color: var(--text-alt);
+}
+
+.error {
+  outline: 2px solid var(--color-6);
 }
